--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,6 +1,8 @@
 @import "./abstracts/variables";
 @import "./abstracts/mixins";
 
+@import "./atomes/card";
+
 @import "./components/talks-list";
 
 a {
