Improve design and improve next-talk/current-talk logic

--- a/styles/sass/atomes/card.scss
+++ b/styles/sass/atomes/card.scss
@@ -1,8 +1,9 @@
 .card {
     transition: $transition-default;
-    @include boxShadow(15px, 0.1, $red-700);
-    &:hover {
-        @include boxShadow(20px, 0.18, $red-700, 5px, y);
-        transform: translateY(-5px);
+    @include md-min {
+        &:hover {
+            @include boxShadow(20px, 0.18, $red-700, 5px, y);
+            transform: translateY(-5px);
+        }
     }
 }
